@@ -1,10 +1,12 @@
-Primary author:
-  Lauris Kaplinski <lauris@helixcode.com>
+Primary authors:
+  Lauris Kaplinski <lauris@kaplinski.com>
+  Mitsuru Oka
+  Masatake Yamato
+  Frank Felfe
 
 Contributors:
   Michael Meeks
   Chema Celorio
-  Frank Felfe
 
 Big parts of the code are taken from the works of:
   Raph Levien
